# wegpiraten

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  Spec.txt  backlog.md  encrypt_secret.py  hello.py  konzept.md  mypy.ini  noxfile.py  output_1.docx  pyproject.toml  pyrightconfig.json  umsetzungslog.md
.claude/: settings.json
.config/: wegpiraten_config.yaml
data/: Wegpiraten Datenbank (alt).sqlite3  Wegpiraten Datenbank.sqlite3  wegpiraten.sqlite3  wegpiraten_datenbank.xlsx  ~$wegpiraten_datenbank.xlsx
daten/: test_serienbrief.xlsx
docs/: konzept.md  rfnb.md  runbook_betriebsablauf.md
output/: Rechnungsuebersicht_2025-08.xlsx  serienbrief_1.docx  serienbrief_2.docx  serienbrief_99.docx
src/: cli.py
src/data_imports/: batch_import_timesheets.py  import_masterdata.py
src/gui/: app.py
src/invoices/: invoice_batch.py
src/module/: __init__.py  config.py  data_loader.py  document_utils.py  entity.py  filters.py  invoice_context.py  invoice_factory.py  invoice_filter.py  invoice_processor.py  reporting_config.py  reporting_factory.py  reporting_processor.py  utils.py
src/rechnungen/: einzahlungsschein_pdf.py  erlagsschein_mit_qr.py  rechnungen_erstellen.py  rechnungen_erstellen_oo.py  rechnungen_oo.py  rechnungslauf.py  serienbrief.py
src/reports/: arbeitszeit_report.py
src/sandbox/: output_1.docx  output_2.docx  output_3.docx  template.docx  tpl_jinja.py
src/shared_modules/: __init__.py  column_config.py  config.py  config_data.py  database_config.py  entity.py  entity_config.py  mapping_entry.py  month_period.py  service_provider_config.py  structure_config.py  utils.py
src/time_sheets/: create_new_time_sheets_batch.py
src/unused/: column_config.py  config_data.py  entity_config.py  expected_columns_config.py  (+8 more)
templates/: rechnungsvorlage - alt.docx  rechnungsvorlage.docx  rechnungsvorlage_obsolet.docx  rechnungsvorlage_test.docx  time_sheet_template.xlsx  zeiterfassunsboegen.xlsx  ~$chnungsvorlage.docx
tests/: test_generate_scor.py  test_timesheet_import_headers.py
vorlagen/: rechnungsvorlage.docx  ~$chnungsvorlage.docx
(+55 files in other folders)
