[project]
name = "wegpiraten"
version = "0.1.0"
description = "CLI für Zeiterfassung und Rechnungsstellung"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "babel>=2.17.0",
    "cryptography>=46.0.2",
    "docx2pdf>=0.1.8",
    "docxtpl>=0.20.1",
    "dotenv>=0.9.9",
    "icecream>=2.1.7",
    "loguru>=0.7.3",
    "nodeenv>=1.10.0",
    "nox>=2026.2.9",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pillow>=11.0.0",
    "pydantic>=2.11.9",
    "pypdf2>=3.0.1",
    "pyright>=1.1.408",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "qrcode[pil]>=8.2",
    "reportlab>=4.4.3",
    "rich>=14.1.0",
    "sqlalchemy>=2.0.43",
    "typer>=0.21.1",
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
dev = [
    "nox>=2025.11.12",
    "pandas-stubs>=2.3.2.250827",
    "pre-commit>=4.0.0",
    "pyright>=1.1.408",
    "pytest>=8.0",
    "ruff>=0.15.0",
    "types-openpyxl>=3.1.5.20250822",
    "types-pyyaml>=6.0.12.20250822",
    "types-qrcode>=8.2.0.20250506",
    "types-reportlab>=4.4.1.20250822",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
wegpiraten = "cli:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
